fixed overflow of messages into Add Message

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -37,7 +37,11 @@ body {
 		position: absolute;
 		bottom: 0;
 		padding: 20px;
-		width: calc(100% - 15px);
+		width: 100%;
+		margin-left: -15px;
+		background-color: white;
+		border-top: 1px solid #eeeeee;
+
 		input[type=text] {
 			height: 45px;
 			font-size: 18px;
